update pendingFriends and friendsList get refreshed, when confirming new friend

--- a/src/app/pages/author/author.page.html
+++ b/src/app/pages/author/author.page.html
@@ -63,7 +63,7 @@
     </ion-item>
     <ion-item>
       <ion-label>
-        <p>{{ this.addFriendUrl }}</p>
+        <p class="ion-text-wrap">{{ this.addFriendUrl }}</p>
       </ion-label>
       <ion-button (click)="copyFriendLinkUrl()" expand="full" fill="clear" slot="end">
         <ion-icon name="copy-outline"></ion-icon>
