--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -5,24 +5,24 @@
 </ion-header>
 
 <ion-content>
-  <form (ngSubmit)="register()" #form="ngForm">
+  <form [formGroup]="registerForm" (ngSubmit)="register()">
     <ion-card>
       <ion-item>
         <ion-label position="stacked">Name</ion-label>
-        <ion-input [(ngModel)]="author.name" name="name" minlength="3" maxlength="30" required="true"></ion-input>
+        <ion-input type="text" formControlName="name"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">Email</ion-label>
-        <ion-input [(ngModel)]="author.email" name="email" minlength="6" maxlength="50" email required="true"></ion-input>
+        <ion-input type="text" formControlName="email"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">Password</ion-label>
-        <ion-input [(ngModel)]="password" name="password" type="password" minlength="8" required="true"></ion-input>
+        <ion-input type="password" formControlName="password"></ion-input>
       </ion-item>
       <ion-grid>
         <ion-row>
           <ion-col>
-            <ion-button type="submit" expand="block" color="success" [disabled]="!form.valid">Register</ion-button>
+            <ion-button type="submit" expand="block" color="success" [disabled]="!registerForm.valid">Register</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
