change catch error when mail/password not found and show message to user

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -15,6 +15,11 @@
   </ion-grid>
 
   <form (ngSubmit)="login()" #form="ngForm">
+    <ng-container *ngIf="hasLoginFailed">
+      <ion-item>
+        <ion-label color="danger">Login failed! Email and/or password is wrong!</ion-label>
+      </ion-item>
+    </ng-container>
     <ion-card>
       <ion-item>
         <ion-label position="stacked">Email</ion-label>
