change share-button size

--- a/src/app/pages/modals/share-modal/share-modal.page.html
+++ b/src/app/pages/modals/share-modal/share-modal.page.html
@@ -18,11 +18,9 @@
           <ion-checkbox slot="start" color="tertiary" [formControlName]="i"></ion-checkbox>
           <ion-label>{{ friend.name }}</ion-label>
         </ion-item>
-        <ion-item>
-          <ion-button type="submit" color="success" expand="full">
-            share
-          </ion-button>
-        </ion-item>
+        <ion-button type="submit" color="success" expand="block">
+          share
+        </ion-button>
       </ng-container>
     </form>
   </ion-list>
