update coordinates pipe to formatCoordinates pipe to be name conform

--- a/src/app/pages/detail/detail.page.html
+++ b/src/app/pages/detail/detail.page.html
@@ -39,7 +39,7 @@
       <ion-item>
         <ion-icon name="compass-outline" slot="start"></ion-icon>
         <ion-label>
-          <p>{{ hike.location.coordinates | coordinates }}</p>
+          <p>{{ hike.location.coordinates | formatCoordinates }}</p>
         </ion-label>
       </ion-item>
       <ion-list-header>Stats</ion-list-header>
