update fullAdress pipe to formatAddress to be name conform

--- a/src/app/pages/detail/detail.page.html
+++ b/src/app/pages/detail/detail.page.html
@@ -33,7 +33,7 @@
       <ion-item>
         <ion-icon name="navigate-outline" slot="start"></ion-icon>
         <ion-label class="ion-text-wrap">
-          <p>{{ hike.location.address | fullAddress }}</p>
+          <p>{{ hike.location.address | formatAddress }}</p>
         </ion-label>
       </ion-item>
       <ion-item>
