change button text to 'To Hike-Collection'

--- a/src/app/pages/add-friend/add-friend.page.html
+++ b/src/app/pages/add-friend/add-friend.page.html
@@ -8,6 +8,6 @@
   <ion-img src="../../../assets/friends.svg"></ion-img>
   <h4 class="ion-text-center">Adding a friend to your friendslist!...</h4>
   <p class="ion-text-center">
-    <ion-button [routerLink]="['/']" color="tertiary">Home</ion-button>
+    <ion-button [routerLink]="['/']" color="tertiary">To Hike-Collection</ion-button>
   </p>
 </ion-content>
